--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A modular personal portfolio website built with React",
   "author": "Vincent Kesumo",
   "license": "MIT",
-  "homepage": "https://YOUR_GITHUB_USERNAME.github.io/modular-website",
+  "homepage": "https://vincentk191.github.io/modular-website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
     "gh-pages": "^6.1.0",
+    "sass": "^1.69.5",
     "vite": "^5.0.8"
   }
 }
